[package]
name = "microlabel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.4.1"
eframe = "0.23.0"
egui_extras = {version="0.23.0", features = ["all_loaders"]}
serde_derive = "1.0.188"
serde_json = "1.0.107"
image = { version = "0.24", features = ["jpeg", "png"] }